--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-# コア依存パッケージ
+# Core
 openai>=1.0.0,<2.0.0
 requests>=2.31.0,<3.0.0
 python-dotenv>=1.0.0,<2.0.0
 
-# テスト
+# Test
 pytest>=7.4.0,<8.0.0
 pytest-cov>=4.1.0,<5.0.0
